# pythono-question-generator

./: .gitignore
backend/: pyproject.toml  requirements.txt  server.py
backend/src/: ai_generator.py  app.py  gem_ai_generator.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
